--- a/test/base.css
+++ b/test/base.css
@@ -24,6 +24,8 @@ header, footer, section, article, aside { display: block; }
 .list-picker li:hover { background: #E4E4E4; }
 .list-picker li.selected { background: #CCC; }
 
+.dragged { opacity: .5; }
+
 /* unit.js */
 table { border-collapse: collapse; border: 1px solid #888; }
 tr { border-bottom: 1px solid #888; }
